<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="4"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/view_screen"
                android:layout_span="4"
                android:background="@color/colorPrimary"
                android:textColor="@color/textColor"
                android:gravity="end|bottom"
                android:textColorHint="@color/textColor"
                android:hint="@string/hint"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:text="@string/_7"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:text="@string/_8"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:text="@string/_9"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            android:text="@string/_divide"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:text="@string/_4"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:text="@string/_5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:text="@string/_6"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            android:text="@string/_multiply"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:text="@string/_1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:text="@string/_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:text="@string/_3"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_subtract"
            android:text="@string/_subtract"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            android:text="@string/_0"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_point"
            android:text="@string/_point"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            android:text="@string/_equal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:text="@string/_add"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_backspace"
            android:text="@string/_backspace"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_restore"
            android:text="@string/_restore"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_memory"
            android:text="@string/_memory"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            android:text="@string/_clear"/>
    </TableRow>
</TableLayout>